--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample_app",
   "private": true,
-  "engines": {"node": "16.x"},
+  "engines": {"node": "12.22.12"},
   "dependencies": {
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
