--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "sample_app",
   "private": true,
-  "engines": {"node": "12.22.12"},
+  "engines": {"node": "12.22.12",
+    "npm": "8.1.x",
+    "yarn": "1.x"
+  },
   "dependencies": {
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
