--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "3.4.1",
     "jquery": "3.4.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack": "^5.0.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
