--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "3.4.1",
     "jquery": "3.4.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.0.0"
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
