--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "sample_app",
   "private": true,
+  "engines": {"node": "12.22.12",
+    "npm": "8.1.x",
+    "yarn": "1.x"
+  },
   "dependencies": {
+    "webpack-cli": "^4.0.0",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "3.4.1",
     "jquery": "3.4.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
