--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "bootstrap": "3.4.1",
     "jquery": "3.4.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.0.0"
+    "webpack": "^5.0.0",
+    "webpack-dev-server": "^3.10.3"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    
   }
 }
