--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "turbolinks": "^5.2.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "babel-loader": "^8.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
