--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           ruby-version: 2.6.8
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '12.22.12' # ここでNode.jsのバージョンを指定
+
       - name: Install Bundler dependencies
         run: |
           bundle config --local path vendor/bundle
