--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -88,5 +88,4 @@ jobs:
             ~/.rbenv/shims/bundle install &&
             RAILS_ENV=production ~/.rbenv/shims/bundle exec rails assets:precompile &&
             RAILS_ENV=production ~/.rbenv/shims/bundle exec rails db:migrate &&
-            ~/.rbenv/shims/bundle exec pumactl restart
-          "
+            ~/.rbenv/shims/bundle exec pumactl restart"
