ActionsのSSH先で正しく、nodejsをインストールするためのコードを記述しました。

--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -78,6 +78,8 @@ jobs:
           ssh -o StrictHostKeyChecking=no -A webapp@${{ secrets.TARGET_HOSTNAME }} "
           cd rails-deploy &&
           git pull origin main &&
+          nvm use 12 &&
+          yarn install &&
           ~/.rbenv/shims/bundle config --local deployment true &&
           ~/.rbenv/shims/bundle config --local without development:test &&
           ~/.rbenv/shims/bundle install &&
