Actionsのデプロイの原因を把握するためにpumaのエラー原因を表示するコードを追加しました。

--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -97,7 +97,10 @@ jobs:
           echo 'Migrating database...'
           RAILS_ENV=production ~/.rbenv/shims/bundle exec rails db:migrate ||
             (echo 'Database migration failed' && exit 1)
-          echo 'Restarting Puma...'
-          ~/.rbenv/shims/bundle exec pumactl restart ||
-            (echo 'Puma restart failed' && exit 1)
+          echo 'Stopping Puma...'
+          ~/.rbenv/shims/bundle exec pumactl stop ||
+            (echo 'Puma stop failed' && exit 1)
+          echo 'Starting Puma...'
+          ~/.rbenv/shims/bundle exec pumactl start ||
+            (echo 'Puma start failed' && exit 1)
           echo 'Deployment completed successfully.'"
