--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -63,6 +63,29 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
+      - uses: actions/checkout@v2
+ 
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6.8
+ 
+      - name: Cache bundle
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: bundle-v1-${{ hashFiles('Gemfile.lock') }}
+ 
+      - name: Run bundle install
+        run: |
+          bundle config --local path vendor/bundle
+          bundle config --local without production
+          bundle install
+ 
+      - name: Install SSH key
+        run: |
+          mkdir -p -m 700 ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/rails-deploy-webapp
+          chmod 600 ~/.ssh/rails-deploy-webapp
       - name: Checkout code
         uses: actions/checkout@v2
   
@@ -77,26 +100,10 @@ jobs:
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/rails-deploy-webapp
           chmod 600 ~/.ssh/rails-deploy-webapp
   
-      - name: Deploy
+      - name: Capistrano deploy
         run: |
           eval $(ssh-agent)
           ssh-add ~/.ssh/rails-deploy-webapp
-          ssh -o StrictHostKeyChecking=no -A webapp@${{ secrets.TARGET_HOSTNAME }} "
-          cd rails-deploy &&
-          git pull origin main &&
-          nvm use 12 &&
-          yarn install &&
-          ~/.rbenv/shims/bundle config --local deployment true &&
-          ~/.rbenv/shims/bundle config --local without development:test &&
-          ~/.rbenv/shims/bundle install &&
-          mkdir -p tmp/pids &&
-          touch tmp/pids/server.pid &&
-          echo 'Precompiling assets...'
-          RAILS_ENV=production ~/.rbenv/shims/bundle exec rails assets:precompile ||
-            (echo 'Asset precompilation failed' && exit 1)
-          echo 'Migrating database...'
-          RAILS_ENV=production ~/.rbenv/shims/bundle exec rails db:migrate ||
-            (echo 'Database migration failed' && exit 1)
-          echo 'Starting Puma...'
-          bundle exec pumactl restart
-          echo 'Deployment completed successfully.'"
+          bundle exec cap production deploy
+        env:
+          CAP_SERVER: ${{ secrets.TARGET_HOSTNAME }}
